Fix shape menu z-index stacking
The toolbox was appearing in front of the shape menu, blocking access to
some shapes on a smaller screen size.

The toolbox has a z-index of 70, so I've given the shape menu a z-index
of 80 to ensure that it appears in front.

Fixes #12

--- a/style.css
+++ b/style.css
@@ -251,6 +251,7 @@ path.blocklyPath.blockly-ws-search-highlight.blockly-ws-search-current {
 #shape-menu {
   position: relative;
   display: inline-block;
+  z-index: 80;
 }
 
 #shapes-dropdown {
